# Event-RGBD-Collector

./: CMakeLists.txt  README.md  sync_issue_report.md  timestamp_logic_comparison.md
include/: data_recorder.hpp  logger.hpp  orbbec_processor.hpp  prophesee_processor.hpp  sync_processor.hpp
src/: data_recorder.cpp  main.cpp  orbbec_processor.cpp  prophesee_processor.cpp  sync_processor.cpp
